--- a/src/HelpDesk/HelpDeskSolution/HelpDesk.Vip.Api/appsettings.json
+++ b/src/HelpDesk/HelpDeskSolution/HelpDesk.Vip.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "vips": "Host=localhost;Port=5432;Database=vips;Username=user;Password=password",
+    "software-center": "http://localhost:18888"
+  }
 }
